The correct right alignment of the icons in the buttons in page tools.  I do not think this needs reviewed, it is going straight to done (#301).

--- a/web/css/transcribeSkin.css
+++ b/web/css/transcribeSkin.css
@@ -564,12 +564,12 @@ div#transcriptletArea {
     font-size: small; // ticket #283
 }
 #controlsSplit button .fa {
-    position: absolute;
-    right: 9px;
+    position: relative;
+/*    margin-left: 3px; use this to bump them a little from the text if need be.*/
 }
 #imageToolSliders .fa {
-    position: absolute;
-    right: 24px;
+    position: relative;
+    /*    margin-left: 3px; use this to bump them a little from the text if need be.*/
 }
 #parsingBtn{
     display: none;
